# ts-os-unified-convergence

./: .gitignore  Cargo.toml  MANIFESTO.md  README.md  pyproject.toml
rust_wave/: Cargo.toml
rust_wave/src/: lib.rs
scripts/: print_convergence.py
src/boggers/: __init__.py
src/boggers/core/: __init__.py  config.py
src/boggers/dashboard/: __init__.py  streamlit_app.py
src/boggers/embeddings/: __init__.py  ollama.py
src/boggers/graph/: __init__.py  schema.py  seed.py  store.py
src/boggers/llm/: __init__.py  ollama.py
src/boggers/wave/: __init__.py  convergence.py  cycle.py  rust_bridge.py
src/rust_wave/: __init__.py
tests/: conftest.py  test_config.py  test_embeddings.py  test_llm.py  test_manifesto.py  test_print_banner.py  test_rust_bridge.py  test_schema.py  test_seed.py  test_store.py  test_wave.py
